--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <div class="logo">Thinkfulbnb</div>
       <nav>
         <ul id="menu">
-          <li><a>Stay</a></li>
-          <li><a>About</a></li>
-          <li><a>Ideas</a></li>
-          <li><a>Host</a></li>
+          <li><a href="#stay">Stay</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#ideas">Ideas</a></li>
+          <li><a href="#host">Host</a></li>
         </ul>
       </nav>
     </header>
@@ -34,31 +34,61 @@
       <!-- Stay -->
       <section id="stay">
         <h2>Find the perfect vacation rental</h2>
-        <!-- Create a form here -->
+          <div class="group">
+            <form>
+              <label for="location">Location</label>
+              <input id="location" type="text" name="location" placeholder="Search destination"/>
+              <label for="arrive">Arrive</label>
+              <input id="arrive" type="date" name="arrive"/>
+              <label for="depart">Depart</label>
+              <input id="depart" type="date" name="depart"/>
+              <label for="type">Type</label>
+                <select name="type">
+                  <option value="apartment">Apartment</option>
+                  <option value="barn">Barn</option>
+                  <option value="castle">Castle</option>
+                  <option value="houseboat">Houseboat</option>
+                  <option value="tiny house">Tiny House</option>
+                  <option value="yacht">Yacht</option>
+                  <option value="yurt">Yurt</option>
+                </select>
+              <button type="submit">Search</button>
+            </form>
+          </div>
       </section>
+
 
       <!-- About -->
       <section id="about" class="alternate-background">
-        <h2>About</h2>
+        <div class="group">
+          <h2>About</h2>
 
-        <img
-          src="images/vacation-rental-pool.png"
-          alt="Thinkfulbnb - Vacation rental pool"
-        />
+          <div class="item">
+            <img
+              src="images/vacation-rental-pool.png"
+              alt="Thinkfulbnb - Vacation rental pool"
+            />
+          </div>
 
-        <img
-          src="images/vacation-rental-inside-stone.png"
-          alt="Thinkfulbnb - Vacation rental inside stone"
-        />
+          <div class="item">
+            <img
+              src="images/vacation-rental-inside-stone.png"
+              alt="Thinkfulbnb - Vacation rental inside stone"
+            />
+          </div>
 
-        <p>
-          Fusce porta odio nunc, eget pretium massa rutrum sit amet. Etiam
-          fringilla aliquam dapibus. Maecenas quis nisi sed turpis aliquam
-          porttitor eget ut quam. Sed vel scelerisque ex. Duis in pharetra
-          neque, at tempus lorem. Aenean mi magna, posuere at quam sed, euismod
-          gravida neque.
-        </p>
+          <div class="item">
+            <p>
+              Fusce porta odio nunc, eget pretium massa rutrum sit amet. Etiam
+              fringilla aliquam dapibus. Maecenas quis nisi sed turpis aliquam
+              porttitor eget ut quam. Sed vel scelerisque ex. Duis in pharetra
+              neque, at tempus lorem. Aenean mi magna, posuere at quam sed, euismod
+              gravida neque.
+            </p>
+          </div>
+        </div>
       </section>
+
 
       <!-- Ideas -->
       <section id="ideas">
