--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
@@ -23,13 +23,12 @@
     <header>
       <div class="logo">Thinkfulbnb</div>
       <nav>
-          <ul id="menu">
-            <li><a href="#stay">Stay</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#ideas">Ideas</a></li>
-            <li><a href="#host">Host</a></li>
-          </ul>
-      </div>
+        <ul id="menu">
+          <li><a href="#stay">Stay</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#ideas">Ideas</a></li>
+          <li><a href="#host">Host</a></li>
+        </ul>
       </nav>
     </header>
 
@@ -57,7 +56,7 @@
 
               <div class="item item-double">
                 <label for="type">Type</label>
-                  <select name="type">
+                  <select name="type" id="type">
                     <option value="apartment">Apartment</option>
                     <option value="barn">Barn</option>
                     <option value="castle">Castle</option>
